da sistemare desktop mode

--- a/searchPage.html
+++ b/searchPage.html
@@ -28,14 +28,48 @@
           </div>            
           </form>
           <h2 class="text-light text-center mt-4">Sfoglia tutto</h2>
-          <div id="genre" class="row gx-3">
-            <div class="col-6 bg-warning h-100">
+          <div id="genre" class="row d-flex justify-content-center mt-3">
+            <div class="col-5 bg-warning h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Podcast</h5>
               <img src="assets/imgs/search/image-2.jpg" alt="">
             </div>
-            <div class="col-6 bg-primary h-100">
+            <div class="col-5 bg-primary h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Create per te</h5>
               <img src="assets/imgs/search/image-3.jpg" alt="">
             </div>  
           </div>
+          <div id="genre" class="row d-flex justify-content-center mt-3">
+            <div class="col-5 bg-danger h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Podcast</h5>
+              <img src="assets/imgs/search/image-4.jpg" alt="">
+            </div>
+            <div class="col-5 bg-primary h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Create per te</h5>
+              <img src="assets/imgs/search/image-5.jpg" alt="">
+            </div>  
+          </div>
+          <div id="genre" class="row d-flex justify-content-center mt-3">
+            <div class="col-5 bg-success h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Podcast</h5>
+              <img src="assets/imgs/search/image-6.jpg" alt="">
+            </div>
+            <div class="col-5 bg-secondary h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Create per te</h5>
+              <img src="assets/imgs/search/image-7.jpg" alt="">
+            </div>  
+          </div>
+          <div id="genre" class="row d-flex justify-content-center mt-3">
+            <div class="col-5 bg-info h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Podcast</h5>
+              <img src="assets/imgs/search/image-8.jpg" alt="">
+            </div>
+            <div class="col-5 bg-primary h-100 mx-2 position-relative rounded-1">
+              <h5 class="py-2 text-light">Create per te</h5>
+              <img src="assets/imgs/search/image-9.jpg" alt="">
+            </div>  
+          </div>
+          
+          
     </main>
     <div class="container-fluid">
       <div class="row">
