--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     aria-controls="navbarNavDropdown"
                     aria-expanded="false"
                     aria-label="Toggle navigation"
+                    id="navbar-toggler"
+
                   >
                     <span class="navbar-toggler-icon" id="icon"></span>
                   </button>
@@ -889,7 +891,7 @@
 
     </div>
     
-    <footer class="position-fixed bottom-0 w-100 border-top border-dark border-md-light" id="footer">
+    <footer class="position-fixed bottom-0 w-100" id="footer">
       <div id="player" class="row align-items-center bg-dark px-3 py-2 gx-0">
         <div
           id="containerLeft"
