--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!--navbar-->
             <nav class="navbar navbar-expand-lg bg-body-dark">
               <div class="container-fluid  flex-column ps-md-0 bg-transparent">
-                <div id="navbar" class="container-fluid bg-dark flex-column ps-0">
+                <div id="navbar" class="container-fluid flex-column ps-0">
                   <a class="navbar-brand" href="#" id="three-dots">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
