fixed popular songs

--- a/artist-page.html
+++ b/artist-page.html
@@ -383,8 +383,9 @@
                         <div id="popularArtistSongs"class="col-12 col-md-7">
                             <h3 class="text-light mb-4">Popolari</h3>
                             <ol class="text-light fw-bold ps-0">
-                              <li class="d-flex justify-content-start align-items-center gap-5">
+                              <li class="d-flex justify-content-between align-items-center gap-3">
                                   <div class="d-flex align-items-center gap-3">
+                                   <span>1</span> 
                                    <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
@@ -393,8 +394,9 @@
                                     <p>3:18</p>
                                   </div>
                               </li>
-                              <li class="d-flex justify-content-start align-items-center gap-5">
+                              <li class="d-flex justify-content-between align-items-center gap-5">
                                 <div class="d-flex align-items-center gap-3">
+                                <span>2</span>
                                  <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
                                  <h5>Ocean Avenue</h5> 
                                 </div>
@@ -403,8 +405,9 @@
                                   <p>3:18</p>
                                 </div>
                             </li>
-                            <li class="d-flex justify-content-start align-items-center gap-5">
+                            <li class="d-flex justify-content-between align-items-center gap-5">
                               <div class="d-flex align-items-center gap-3">
+                               <span>3</span>
                                <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
                                <h5>Ocean Avenue</h5> 
                               </div>
@@ -413,8 +416,9 @@
                                 <p>3:18</p>
                               </div>
                           </li>
-                          <li class="d-flex justify-content-start align-items-center gap-5">
+                          <li class="d-flex justify-content-between align-items-center gap-5">
                             <div class="d-flex align-items-center gap-3">
+                              <span>4</span>
                              <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
                              <h5>Ocean Avenue</h5> 
                             </div>
@@ -423,8 +427,9 @@
                               <p>3:18</p>
                             </div>
                         </li>
-                        <li class="d-flex justify-content-start align-items-center gap-5">
+                        <li class="d-flex justify-content-between align-items-center gap-5">
                           <div class="d-flex align-items-center gap-3">
+                           <span>5</span>
                            <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
                            <h5>Ocean Avenue</h5> 
                           </div>
