fixed cover position

--- a/artist-page.html
+++ b/artist-page.html
@@ -316,9 +316,9 @@
           </div>
 
 
-            <div class="col-12 col-xl-7 p-3" id="main-container">
+            <div class="col-12 col-xl-7" id="main-container">
               <div id="artistPage" class="row row-gap-5">
-                <div class="d-flex justify-content-between align-items-center mb-5">
+                <div class="d-flex justify-content-between align-items-center mb-5 px-3">
                     <div id ="switch-icon" class="p-1">
                         <button class="bg-dark border border-dark rounded-circle me-2"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-left" viewBox="0 0 16 16">
                             <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
@@ -334,7 +334,7 @@
                           </svg><span class="text-white ms-2">Username</span></button>
                     </div>
                 </div>
-                <div class="container-fluid mt-5">
+                <div class="container-fluid mt-5 ms-2">
                   <div class="row g-1">
                     <div class="col-6">
                       <div class="d-flex">
