fixed forward button and social links

--- a/artist-page.html
+++ b/artist-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify - Homepage</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/artist-style.css">
@@ -41,10 +41,8 @@
                     aria-controls="navbarNavDropdown"
                     aria-expanded="false"
                     aria-label="Toggle navigation"
-                    id="navbar-toggler"
-
                   >
-                    <span class="navbar-toggler-icon" id="icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                   </button>
                   <div
                     class="collapse navbar-collapse d-flex flex-column bg-transparent"
@@ -546,11 +544,6 @@
                               </svg>
                             </a>
                         </div>
-                        <hr class="text-secondary mt-2">
-                        <div class="d-flex justify-content-between mt-2">
-                            <div class="col-9 text-secondary"><span>Informazioni Legali </span><span> Centro sulla privacy </span> Informativa <span></span><span>Cookie </span><span>Info annunci</span></div>
-                            <div class="col-3 text-secondary">&copy;2023 Matteo Vacca,<br> Salvatore Mercurio,<br>Vittorio Vescio</div>
-                        </div>
                       
                     </div>
                    </div>
@@ -558,7 +551,7 @@
                 <div id="friends" class="col-2 container-fluid p-0 bg-dark">
                   <div class="d-flex justify-content-between mt-2 ms-2">
                     <h5 class="text-light">Attività amici</h5>
-                    <div class="d-flex flex-end mt-1 me-1">
+                    <div class="d-flex flex-end">
                       
                       <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
                         <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -573,8 +566,8 @@
                     <div class="d-flex justify-content-between">
                       <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
                       <div class="text-align-start">
-                        <p class="mb-0">Charlie Hookham</p>
-                        <p class="mb-0">all right - ajeje</p>
+                        <p>Charlie Hookham</p>
+                        <p>all right - ajeje</p>
                         <p><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
                       <div>
@@ -584,8 +577,8 @@
                     <div class="d-flex justify-content-between">
                       <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
                       <div class="text-align-start">
-                        <p class="mb-0">Charlie Hookham</p>
-                        <p class="mb-0">all right - ajeje</p>
+                        <p>Charlie Hookham</p>
+                        <p>all right - ajeje</p>
                         <p><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
                       <div>
@@ -595,8 +588,8 @@
                     <div class="d-flex justify-content-between">
                       <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
                       <div class="text-align-start">
-                        <p class="mb-0">Charlie Hookham</p>
-                        <p class="mb-0">all right - ajeje</p>
+                        <p>Charlie Hookham</p>
+                        <p>all right - ajeje</p>
                         <p><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
                       <div>
@@ -629,11 +622,11 @@
           <div>
             <button class="btn bg-transparent text-light" id="another-svg">
               <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M1 3v9h14V3H1zm0-1h14a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
-                  fill-rule="nonzero"
-                ></path>
-                <path d="M10 8h4v3h-4z"></path>
+                  <path
+                    d="M1 3v9h14V3H1zm0-1h14a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
+                    fill-rule="nonzero"
+                  ></path>
+                  <path d="M10 8h4v3h-4z"></path>
               </svg>
             </button>
           </div>
@@ -647,7 +640,7 @@
                 height="16"
                 width="16"
                 aria-hidden="true"
-                viewbox="0 0 16 16"
+                viewBox="0 0 16 16"
                 data-encore-id="icon"
                 class="Svg-sc-ytk21e-0 uPxdw"
               >
@@ -665,7 +658,7 @@
                 height="16"
                 width="16"
                 aria-hidden="true"
-                viewbox="0 0 16 16"
+                viewBox="0 0 16 16"
                 data-encore-id="icon"
                 class="Svg-sc-ytk21e-0 uPxdw"
               >
@@ -680,7 +673,7 @@
                 height="16"
                 width="16"
                 aria-hidden="true"
-                viewbox="0 0 16 16"
+                viewBox="0 0 16 16"
                 data-encore-id="icon"
                 class="Svg-sc-ytk21e-0 uPxdw"
               >
@@ -695,7 +688,7 @@
                 height="16"
                 width="16"
                 aria-hidden="true"
-                viewbox="0 0 16 16"
+                viewBox="0 0 16 16"
                 data-encore-id="icon"
                 class="Svg-sc-ytk21e-0 uPxdw"
               >
@@ -710,7 +703,7 @@
                 height="16"
                 width="16"
                 aria-hidden="true"
-                viewbox="0 0 16 16"
+                viewBox="0 0 16 16"
                 data-encore-id="icon"
                 class="Svg-sc-ytk21e-0 uPxdw"
               >
@@ -741,7 +734,7 @@
               height="16"
               width="16"
               aria-hidden="true"
-              viewbox="0 0 16 16"
+              viewBox="0 0 16 16"
               data-encore-id="icon"
               class="Svg-sc-ytk21e-0 uPxdw"
             >
@@ -756,7 +749,7 @@
               height="16"
               width="16"
               aria-hidden="true"
-              viewbox="0 0 16 16"
+              viewBox="0 0 16 16"
               data-encore-id="icon"
               class="Svg-sc-ytk21e-0 uPxdw"
             >
@@ -772,7 +765,7 @@
               width="16"
               aria-hidden="true"
               class="Svg-sc-ytk21e-0 uPxdw"
-              viewbox="0 0 16 16"
+              viewBox="0 0 16 16"
               data-encore-id="icon"
             >
               <path
@@ -790,7 +783,7 @@
                 aria-hidden="true"
                 aria-label="Volume alto"
                 id="volume-icon"
-                viewbox="0 0 16 16"
+                viewBox="0 0 16 16"
                 data-encore-id="icon"
                 class="Svg-sc-ytk21e-0 uPxdw"
               >
@@ -816,7 +809,5 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/script.js"></script>
   </body>
 </html>
-<!-- prova -->
