--- a/artist-page.html
+++ b/artist-page.html
@@ -334,19 +334,6 @@
                           </svg><span class="text-white ms-2">Username</span></button>
                     </div>
                 </div>
-                <div class="container-fluid mt-5 ms-2">
-                  <div class="row g-1">
-                    <div class="col-6">
-                      <div class="d-flex">
-                        <i class="bi bi-check-circle"></i>
-                        <h5 class="text-light" id="artist-badge">Artista verificato</h5>
-                      </div>
-                      <h1 class="text-light">Artist Name</h1>
-                      <h5 class="py-3 text-light">3.433.158 ascoltatori mensili</h5>
-                    </div>
-                        
-                  </div> 
-                </div>
               </div>
 
                 <div class="container-fluid mt-5">
@@ -383,7 +370,7 @@
                     <div class="row flex-column-reverse flex-xl-row">
                         <div id="popularArtistSongs"class="col-12 col-xl-7">
                             <h3 class="text-light mb-4">Popolari</h3>
-                            <ol class="text-light fw-bold ps-0">
+                            <!--<ol class="text-light fw-bold ps-0">
                               <li class="d-flex justify-content-between align-items-center">
                                   <div class="d-flex align-items-center gap-3">
                                    <span>1</span> 
@@ -439,7 +426,7 @@
                             <p>3:18</p>
                           </div>
                         </li>
-                      </ol>
+                      </ol>-->
                       <a href="#" class="text-white-50 text-decoration-none d-none d-xl-flex" id="moreSongs">
                         <h5>VISUALIZZA ALTRO</h5>
                       </a>
@@ -809,5 +796,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/artist-page-script.js"></script>
   </body>
 </html>
