--- a/searchPage.html
+++ b/searchPage.html
@@ -173,7 +173,7 @@
               </div>
             </div>
           </form>
-          <h2 class="text-light text-center mt-4">Sfoglia tutto</h2>
+          <h2 id="section" class="text-light text-center mt-4 mb-3">Sfoglia tutto</h2>
           <div id="container" class="container">
             <div id="genre" class="row d-flex justify-content-center mt-3">
               <div class="col-5 bg-warning h-100 mx-2 position-relative rounded-1">
