--- a/artist-page.html
+++ b/artist-page.html
@@ -481,7 +481,7 @@
                 <div id="friends" class="col-2 container-fluid p-0 bg-dark">
                   <div class="d-flex justify-content-between mt-2 ms-2">
                     <h5 class="text-light">Attività amici</h5>
-                    <div class="d-flex flex-end">
+                    <div class="d-flex flex-end me-2 mt-1">
                       
                       <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
                         <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -496,8 +496,8 @@
                     <div class="d-flex justify-content-between">
                       <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
                       <div class="text-align-start">
-                        <p>Charlie Hookham</p>
-                        <p>all right - ajeje</p>
+                        <p class="mb-0">Charlie Hookham</p>
+                        <p class="mb-0">all right - ajeje</p>
                         <p><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
                       <div>
@@ -507,8 +507,8 @@
                     <div class="d-flex justify-content-between">
                       <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
                       <div class="text-align-start">
-                        <p>Charlie Hookham</p>
-                        <p>all right - ajeje</p>
+                        <p class="mb-0">Charlie Hookham</p>
+                        <p class="mb-0">all right - ajeje</p>
                         <p><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
                       <div>
@@ -518,8 +518,8 @@
                     <div class="d-flex justify-content-between">
                       <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
                       <div class="text-align-start">
-                        <p>Charlie Hookham</p>
-                        <p>all right - ajeje</p>
+                        <p class="mb-0">Charlie Hookham</p>
+                        <p class="mb-0">all right - ajeje</p>
                         <p><i class="bi bi-0-circle"></i> EP III</p>
                       </div>
                       <div>
@@ -539,8 +539,8 @@
               <a class="pe-3" href=""><img id="song-img" width="85px" src="assets/images/avatar.png" alt="" /></a>
             </div>
             <div class="d-flex flex-column">
-              <a class="text-decoration-none text-light" href="">Come As You Are</a>
-              <a class="text-decoration-none text-light" href=""> Nirvana </a>
+              <a class="text-decoration-none text-light" id="song-title" href="">Come As You Are</a>
+              <a class="text-decoration-none text-light" id="song-artist" href=""> Nirvana </a>
             </div>
           </div>
           <div class="text-light flex-grow-1 d-flex flex-xl-grow-0 justify-content-end justify-content-xl-center" id="heart-svg">
@@ -732,6 +732,7 @@
           </div>
         </div>
       </div>
+      <audio id="audio-player" controls class="d-none"></audio>
     </footer>
 
     <script
